--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -123,7 +123,7 @@ jobs:
     needs: [python-dependencies, node-dependencies]
     strategy:
       matrix:
-        suite: [general]
+        suite: [features]
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     env:
