Remove Flake8 and add Ruff to dependabot.yaml

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -111,7 +111,6 @@ updates:
         dependency-type: "development"
         patterns:
           - "pytest*"
-          - "flake8*"
           - "pylint*"
           - "types*"
           - "pep8"
@@ -127,3 +126,4 @@ updates:
           - "playwright"
           - "black"
           - "djlint"
+          - "ruff"
