--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -123,7 +123,7 @@ jobs:
     needs: [python-dependencies, node-dependencies]
     strategy:
       matrix:
-        suite: [features, summaries, general, journeys, list_collector, supplementary_data]
+        suite: [features, summaries, journeys, list_collector, supplementary_data]
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     env:
