--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ types-pytz = "^2024.1.0.20240417"
 playwright = "^1.42.0"
 black = "^24.2.0"
 djlint = "^1.34.2"
-ruff = "^0.7.0"
+ruff = "^0.9.1"
 
 
 [tool.poetry.dependencies]
@@ -105,6 +105,7 @@ exclude = ["tests/*", "scripts/*"]
 
 [tool.ruff.lint]
 extend-ignore = [
+    "A005", # Reusing a builtin module name for the name of a module
     "B024", # No abstract methods in abstract base class
     "B027", # Non-abstract empty methods in abstract base classes
     "B028",# No explicit keyword argument found
