Test actions workflow

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -112,22 +112,11 @@ jobs:
       - name: Running unit tests
         run: make test-unit
   validate-schemas:
+    needs: python-dependencies
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
-      - run: |
-          echo "PYTHON_VERSION=$(cat .python-version)" >> $GITHUB_ENV
       - name: Run validator
         run: ./scripts/run_validator.sh
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: 1.8.4
-          virtualenvs-create: true
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-          cache: "poetry"
       - name: Running schema tests
         run: make validate-test-schemas
   test-functional:
