--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          installation-arguments: --git https://github.com/python-poetry/poetry.git@2950bd6e9a387cea84ecc808a598473443ad9b9c
+          version: 2.1.2
           virtualenvs-create: true
       - uses: actions/setup-python@v5
         with:
@@ -56,7 +56,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          installation-arguments: --git https://github.com/python-poetry/poetry.git@2950bd6e9a387cea84ecc808a598473443ad9b9c
+          version: 2.1.2
           virtualenvs-create: true
       - uses: actions/setup-python@v5
         with:
@@ -95,7 +95,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          installation-arguments: --git https://github.com/python-poetry/poetry.git@2950bd6e9a387cea84ecc808a598473443ad9b9c
+          version: 2.1.2
           virtualenvs-create: true
       - uses: actions/setup-python@v5
         with:
@@ -122,7 +122,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          installation-arguments: --git https://github.com/python-poetry/poetry.git@2950bd6e9a387cea84ecc808a598473443ad9b9c
+          version: 2.1.2
           virtualenvs-create: true
       - uses: actions/setup-python@v5
         with:
@@ -151,7 +151,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          installation-arguments: --git https://github.com/python-poetry/poetry.git@2950bd6e9a387cea84ecc808a598473443ad9b9c
+          version: 2.1.2
           virtualenvs-create: true
       - uses: actions/setup-python@v5
         with:
