change package.json type to module
Signed-off-by: Yuyutsu Rai <Yuyutsu.Rai@ons.gov.uk>

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "eq-questionnaire-runner",
     "version": "1.0.0",
     "description": "ONS Digital eQ Questionnaire Runner App",
+    "type": "module",
     "author": {
         "name": "ONS Digital",
         "url": "http://onsdigital.github.io/"
