--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ on:
 
 jobs:
   docker-push:
+      permissions:
+        contents: read
+
       runs-on: ubuntu-22.04
       steps:
         - uses: actions/checkout@v4
