--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -112,6 +112,8 @@ jobs:
       - name: Running unit tests
         run: make test-unit
   validate-schemas:
+    permissions:
+      contents: 'read'
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
