--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,11 @@ on:
 
 jobs:
   docker-push:
+      permissions:
+        contents: read
       runs-on: ubuntu-22.04
       steps:
-        - uses: actions/checkout@v4
+        - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         - name: Write app version
           run: printf "$GITHUB_SHA" > .application-version
         - name: Build
