--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -12,7 +12,7 @@ jobs:
   analyze:
     name: Analyze
 
-    runs-on: [ubuntu-latest]
+    runs-on: [ubuntu-22.04]
     permissions:
       security-events: write
       packages: read
