Updated the suite in pull_request

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -134,7 +134,7 @@ jobs:
     needs: [python-dependencies, node-dependencies]
     strategy:
       matrix:
-        suite: [ timeout_modal_expired, timeout_modal_extended, timeout_modal_extended_new_window, features, summaries, general, journeys, components, list_collector, hub_and_spoke, supplementary_data]
+        suite: [ timeout_modal_expired, timeout_modal_extended, timeout_modal_extended_new_window, features, summaries, general, journeys, components, list_collector, hub_and_spoke, supplementary_data_interstitial, supplementary_data_list_collector, supplementary_data_repeating_block]
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     env:
