Add Build mode option to matrix

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -22,7 +22,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ "javascript", "python", "actions"]
+        include:
+        - language: actions
+          build-mode: none
+        - language: javascript-typescript
+          build-mode: none
+        - language: python
+          build-mode: none
 
     steps:
     - name: Checkout repository
