--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,7 +19,15 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           echo "PYTHON_VERSION=$(cat .python-version)" >> $GITHUB_ENV
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v46
+        with:
+          files_ignore: |
+            **
+            !.schemas-version
       - name: Install Poetry
+        if: steps.changed-files.outputs.only_changed != 'true'
         uses: snok/install-poetry@v1
         with:
           version: 2.1.2
