--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v46
-        with:
-          files_ignore: |
-            .github/workflows/pull_request.yml
-            .schemas-version
+#        with:
+#          files_ignore: |
+#            .github/workflows/pull_request.yml
+#            .schemas-version
       - name: List all changed files
         env:
           ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
