--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,22 +19,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           echo "PYTHON_VERSION=$(cat .python-version)" >> $GITHUB_ENV
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v46
-#        with:
-#          files_ignore: |
-#            .github/workflows/pull_request.yml
-#            .schemas-version
-      - name: List all changed files
-        env:
-          ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
-        run: |
-          for file in ${ALL_CHANGED_FILES}; do
-            echo "$file was changed"
-          done
       - name: Install Poetry
-        if: steps.changed-files.outputs.only_changed != 'true'
         uses: snok/install-poetry@v1
         with:
           version: 2.1.2
@@ -163,7 +148,15 @@ jobs:
           node-version-file: ".nvmrc"
       - run: |
           echo "PYTHON_VERSION=$(cat .python-version)" >> $GITHUB_ENV
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v46
+        with:
+          files_ignore: |
+            .github/workflows/pull_request.yml
+            .schemas-version
       - name: Install Poetry
+        if: steps.changed-files.outputs.all_changed_files != ''
         uses: snok/install-poetry@v1
         with:
           version: 2.1.2
