--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -77,7 +77,7 @@ jobs:
       - name: HTML linting
         run: make lint-html
   test-unit:
-    if: contains(github.event.pull_request.changed_files, 'app/') || contains(github.event.pull_request.changed_files, 'tests/') || contains(github.event.pull_request.changed_files, 'poetry.lock') || contains(github.event.pull_request.changed_files, 'package-lock.json')
+    if: contains(fromJSON('["app/", "tests/", "poetry.lock", "package-lock.json"), github.event.pull_request.changed_files)
     needs: python-dependencies
     runs-on: ubuntu-22.04
     steps:
