--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -190,15 +190,7 @@ jobs:
           echo "Writing SHA $SHA to .application_version"
           printf $SHA > .application-version
       - name: Build
-        run: >
-          docker build -t onsdigital/eq-questionnaire-runner:$TAG
-          -t ${{ secrets.GAR_LOCATION }}/${{ secrets.GAR_PROJECT_ID }}/docker-images/eq-questionnaire-runner:$TAG .
-      - name: Push to Docker Hub
-        run: |
-          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          echo "Pushing to DockerHub with tag $TAG"
-          docker push onsdigital/eq-questionnaire-runner:$TAG
-
+        run: docker build -t ${{ secrets.GAR_LOCATION }}/${{ secrets.GAR_PROJECT_ID }}/docker-images/eq-questionnaire-runner:$TAG .
       - name: Push to GAR
         run: |
           gcloud auth configure-docker ${{ secrets.GAR_LOCATION }}
