Use correct label for both jobs

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -77,7 +77,7 @@ jobs:
       - name: HTML linting
         run: make lint-html
   test-unit:
-    if: !contains(github.event.pull_request.labels.*.name, 'no unit tests')
+    if: !contains(github.event.pull_request.labels.*.name, 'tests not required')
     needs: python-dependencies
     runs-on: ubuntu-22.04
     steps:
@@ -132,7 +132,7 @@ jobs:
       - name: Running schema validation
         run: make validate-test-schemas
   test-functional:
-    if: !contains(github.event.pull_request.labels.*.name, 'no functional tests')
+    if: !contains(github.event.pull_request.labels.*.name, 'tests not required')
     needs: [python-dependencies, node-dependencies]
     strategy:
       matrix:
