--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,6 +14,8 @@ concurrency:
 
 jobs:
   python-dependencies:
+    permissions:
+      contents: 'read'
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -33,6 +35,8 @@ jobs:
           sudo apt-get install libsnappy-dev
           poetry install
   node-dependencies:
+    permissions:
+      contents: 'read'
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -42,6 +46,8 @@ jobs:
       - name: Install npm deps
         run: npm install
   lint:
+    permissions:
+      contents: 'read'
     needs: [python-dependencies, node-dependencies]
     runs-on: ubuntu-22.04
     steps:
@@ -77,6 +83,8 @@ jobs:
       - name: HTML linting
         run: make lint-html
   test-unit:
+    permissions:
+      contents: 'read'
     needs: python-dependencies
     runs-on: ubuntu-22.04
     steps:
@@ -133,6 +141,8 @@ jobs:
       - name: Running schema validation
         run: make validate-test-schemas
   test-functional:
+    permissions:
+      contents: 'read'
     needs: [python-dependencies, node-dependencies]
     strategy:
       matrix:
