Add conditional workflow for tests in actions (#1684)

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -83,6 +83,7 @@ jobs:
       - name: HTML linting
         run: make lint-html
   test-unit:
+    if: "!contains(github.event.pull_request.labels.*.name, 'tests not required')"
     permissions:
       contents: 'read'
     needs: python-dependencies
@@ -141,6 +142,7 @@ jobs:
       - name: Running schema validation
         run: make validate-test-schemas
   test-functional:
+    if: "!contains(github.event.pull_request.labels.*.name, 'tests not required')"
     permissions:
       contents: 'read'
     needs: [python-dependencies, node-dependencies]
