--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -148,7 +148,7 @@ jobs:
     needs: [python-dependencies, node-dependencies]
     strategy:
       matrix:
-        suite: [timeout_modal, features, general]
+        suite: [components_and_general, features_and_journeys]
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     env:
